--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/microservices": "^10.3.1",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.0",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.3",
     "class-transformer": "^0.5.1",
